--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,10 +22,10 @@ services:
       - projectdevops 
     restart: on-failure  
   angular:
-    image: wassim19/achatfront:1.0
+    image: dadoulanda/angular
     container_name: angularcontainer
     ports: 
-      - 4200:4200
+      - 80:80
     depends_on:
       - spring-boot
     networks:
